syntax = "proto3";
package bus.v1;

message Envelope {
  string type = 1;                   
  string payload_json = 2;             
  map<string, string> meta = 3;    
}

message Ok {
  string payload_json = 1;            
}

message BasicError {
  string _type = 1;               
  string message = 2;
}

message Result {
  oneof kind {
    Ok ok = 1;
    BasicError err = 2;
  }
}

service CommandBus {
  rpc Invoke(Envelope) returns (Result);
}
